unpackaged/main/default/objects/TestSettings__c/TestSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Some Test Settings for TG Dev Org</description>
    <label>Test Custom Settings</label>
</CustomObject>