unpackaged/main/default/objects/TestSettings__c/fields/Test_Settings_Check_Box__c.field-meta.xml
<CustomField>
    <fullName>Test_Settings_Check_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A test check box</description>
    <inlineHelpText>HEEEELP ME</inlineHelpText>
    <label>Test Settings Check Box</label>
    <type>Checkbox</type>
</CustomField>