unpackaged/main/default/objects/TestSettings__c/fields/Test_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Test_Text_Area__c</fullName>
    <description>Text area to put text</description>
    <label>Test Text Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>