unpackaged/main/default/objects/TestSettings__c/fields/Test_URL__c.field-meta.xml
<CustomField>
    <fullName>Test_URL__c</fullName>
    <defaultValue>$Profile.Description</defaultValue>
    <label>Test URL</label>
    <type>Url</type>
</CustomField>